Adjust projects section layout to prevent size shift

--- a/src/app/projects/components/section/section.component.scss
+++ b/src/app/projects/components/section/section.component.scss
@@ -8,7 +8,7 @@
   @include md {
     max-width: 66vw;
     margin: auto;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 24px;
   }
 }
